Generate documentation using TYPEDOC.

--- a/UI-Angular/JobsAdmin/documentation/classes/_src_app_applicants_applicants_service_.applicantsservice.html
+++ b/UI-Angular/JobsAdmin/documentation/classes/_src_app_applicants_applicants_service_.applicantsservice.html
@@ -136,6 +136,8 @@
 									<li>Defined in src/app/applicants/applicants.service.ts:21</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -165,7 +167,7 @@
 					<div class="tsd-signature tsd-kind-icon">http<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">AuthHttp</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in src/app/applicants/applicants.service.ts:24</li>
+							<li>Defined in src/app/applicants/applicants.service.ts:26</li>
 						</ul>
 					</aside>
 				</section>
@@ -182,9 +184,11 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants.service.ts:76</li>
+									<li>Defined in src/app/applicants/applicants.service.ts:102</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -192,6 +196,7 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="_src_app_core_model_.applicants.html" class="tsd-signature-type">Applicants</a><span class="tsd-signature-symbol">&gt;</span></h4>
+							<p>Promise</p>
 						</li>
 					</ul>
 				</section>
@@ -205,9 +210,14 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants.service.ts:124</li>
+									<li>Defined in src/app/applicants/applicants.service.ts:163</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Applocants Notes</p>
+								</div>
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -215,6 +225,7 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="_src_app_core_model_.applicantnotes.html" class="tsd-signature-type">ApplicantNotes</a><span class="tsd-signature-symbol">&gt;</span></h4>
+							<p>Promise</p>
 						</li>
 					</ul>
 				</section>
@@ -228,9 +239,11 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants.service.ts:142</li>
+									<li>Defined in src/app/applicants/applicants.service.ts:188</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -238,6 +251,7 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="_src_app_core_model_.applicantquestions.html" class="tsd-signature-type">ApplicantQuestions</a><span class="tsd-signature-symbol">&gt;</span></h4>
+							<p>Promise</p>
 						</li>
 					</ul>
 				</section>
@@ -251,13 +265,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants.service.ts:186</li>
+									<li>Defined in src/app/applicants/applicants.service.ts:233</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
 									<h5>applicants: <a href="_src_app_core_model_.applicants.html" class="tsd-signature-type">Applicants</a><span class="tsd-signature-symbol">[]</span></h5>
+									<div class="tsd-comment tsd-typography">
+									</div>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -274,13 +292,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants.service.ts:222</li>
+									<li>Defined in src/app/applicants/applicants.service.ts:273</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
 									<h5>applicants: <a href="_src_app_core_model_.applicantnotes.html" class="tsd-signature-type">ApplicantNotes</a><span class="tsd-signature-symbol">[]</span></h5>
+									<div class="tsd-comment tsd-typography">
+									</div>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -297,9 +319,11 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants.service.ts:70</li>
+									<li>Defined in src/app/applicants/applicants.service.ts:92</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -310,6 +334,7 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<p>Promise</p>
 						</li>
 					</ul>
 				</section>
@@ -323,9 +348,11 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants.service.ts:159</li>
+									<li>Defined in src/app/applicants/applicants.service.ts:214</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -333,6 +360,7 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">void</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<p>Promise</p>
 						</li>
 					</ul>
 				</section>
@@ -346,9 +374,14 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants.service.ts:198</li>
+									<li>Defined in src/app/applicants/applicants.service.ts:249</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Applicants Notes</p>
+								</div>
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -356,6 +389,7 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<p>Promise</p>
 						</li>
 					</ul>
 				</section>
@@ -369,10 +403,13 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants.service.ts:210</li>
+									<li>Defined in src/app/applicants/applicants.service.ts:261</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+							</div>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<p>Promise</p>
 						</li>
 					</ul>
 				</section>
@@ -386,9 +423,11 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants.service.ts:110</li>
+									<li>Defined in src/app/applicants/applicants.service.ts:143</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -396,6 +435,7 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="_src_app_core_model_.applicants.html" class="tsd-signature-type">Applicants</a><span class="tsd-signature-symbol">&gt;</span></h4>
+							<p>Promise</p>
 						</li>
 					</ul>
 				</section>
@@ -409,9 +449,11 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants.service.ts:130</li>
+									<li>Defined in src/app/applicants/applicants.service.ts:173</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -419,6 +461,7 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="_src_app_core_model_.applicantnotes.html" class="tsd-signature-type">ApplicantNotes</a><span class="tsd-signature-symbol">&gt;</span></h4>
+							<p>Promise</p>
 						</li>
 					</ul>
 				</section>
@@ -432,9 +475,11 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants.service.ts:149</li>
+									<li>Defined in src/app/applicants/applicants.service.ts:199</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -442,6 +487,7 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="_src_app_core_model_.applicantquestions.html" class="tsd-signature-type">ApplicantQuestions</a><span class="tsd-signature-symbol">&gt;</span></h4>
+							<p>Promise</p>
 						</li>
 					</ul>
 				</section>
@@ -455,9 +501,11 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants.service.ts:165</li>
+									<li>Defined in src/app/applicants/applicants.service.ts:224</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -465,6 +513,7 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="_src_app_core_model_.applicantquestions.html" class="tsd-signature-type">ApplicantQuestions</a><span class="tsd-signature-symbol">&gt;</span></h4>
+							<p>Promise</p>
 						</li>
 					</ul>
 				</section>
@@ -478,10 +527,13 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants.service.ts:53</li>
+									<li>Defined in src/app/applicants/applicants.service.ts:66</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+							</div>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<p>Promise</p>
 						</li>
 					</ul>
 				</section>
@@ -495,10 +547,16 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants.service.ts:60</li>
+									<li>Defined in src/app/applicants/applicants.service.ts:78</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Return the list of applicats to serve the shedules dropdown</p>
+								</div>
+							</div>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<p>Promise</p>
 						</li>
 					</ul>
 				</section>
@@ -512,10 +570,16 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants.service.ts:232</li>
+									<li>Defined in src/app/applicants/applicants.service.ts:287</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Load the list of Questions</p>
+								</div>
+							</div>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<p>Promise</p>
 						</li>
 					</ul>
 				</section>
@@ -529,9 +593,11 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants.service.ts:28</li>
+									<li>Defined in src/app/applicants/applicants.service.ts:34</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -539,6 +605,7 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">any</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<p>Promise</p>
 						</li>
 					</ul>
 				</section>
@@ -552,9 +619,11 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants.service.ts:83</li>
+									<li>Defined in src/app/applicants/applicants.service.ts:112</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -562,6 +631,7 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="_src_app_core_model_.applicants.html" class="tsd-signature-type">Applicants</a><span class="tsd-signature-symbol">&gt;</span></h4>
+							<p>Promise</p>
 						</li>
 					</ul>
 				</section>
@@ -575,9 +645,11 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants.service.ts:97</li>
+									<li>Defined in src/app/applicants/applicants.service.ts:129</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
@@ -585,6 +657,7 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="_src_app_core_model_.applicantnotes.html" class="tsd-signature-type">ApplicantNotes</a><span class="tsd-signature-symbol">&gt;</span></h4>
+							<p>Promise</p>
 						</li>
 					</ul>
 				</section>
