--- a/UI-Angular/JobsAdmin/documentation/classes/_src_app_applicants_applicants_add_applicants_add_component_.applicantsaddcomponent.html
+++ b/UI-Angular/JobsAdmin/documentation/classes/_src_app_applicants_applicants_add_applicants_add_component_.applicantsaddcomponent.html
@@ -274,7 +274,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants-add/applicants-add.component.ts:60</li>
+									<li>Defined in src/app/applicants/applicants-add/applicants-add.component.ts:57</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">boolean</span></h4>
@@ -294,13 +294,20 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants-add/applicants-add.component.ts:91</li>
+									<li>Defined in src/app/applicants/applicants-add/applicants-add.component.ts:101</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Add a new applicant passing the FormControl</p>
+								</div>
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
 									<h5>form: <span class="tsd-signature-type">FormControl</span></h5>
+									<div class="tsd-comment tsd-typography">
+									</div>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -317,9 +324,14 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants-add/applicants-add.component.ts:87</li>
+									<li>Defined in src/app/applicants/applicants-add/applicants-add.component.ts:92</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Return to the previous page.</p>
+								</div>
+							</div>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
 						</li>
 					</ul>
@@ -334,12 +346,12 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants-add/applicants-add.component.ts:69</li>
+									<li>Defined in src/app/applicants/applicants-add/applicants-add.component.ts:66</li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>List all applicants</p>
+									<p>Load just one applicant, pass the code and return all data.</p>
 								</div>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
@@ -364,7 +376,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants-add/applicants-add.component.ts:50</li>
+									<li>Defined in src/app/applicants/applicants-add/applicants-add.component.ts:47</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -381,13 +393,21 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants-add/applicants-add.component.ts:79</li>
+									<li>Defined in src/app/applicants/applicants-add/applicants-add.component.ts:81</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Send the data from the form to save(add) or update
+									pass the FromControl</p>
+								</div>
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
 									<h5>form: <span class="tsd-signature-type">FormControl</span></h5>
+									<div class="tsd-comment tsd-typography">
+									</div>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -404,13 +424,20 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants-add/applicants-add.component.ts:104</li>
+									<li>Defined in src/app/applicants/applicants-add/applicants-add.component.ts:118</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Update the applicant passing the FormControl</p>
+								</div>
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
 									<h5>form: <span class="tsd-signature-type">FormControl</span></h5>
+									<div class="tsd-comment tsd-typography">
+									</div>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -427,9 +454,14 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants-add/applicants-add.component.ts:115</li>
+									<li>Defined in src/app/applicants/applicants-add/applicants-add.component.ts:133</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Change the page title.</p>
+								</div>
+							</div>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
 						</li>
 					</ul>
