--- a/UI-Angular/JobsAdmin/documentation/classes/_src_app_applicants_applicants_filter_applicants_filter_component_.applicantsfiltercomponent.html
+++ b/UI-Angular/JobsAdmin/documentation/classes/_src_app_applicants_applicants_filter_applicants_filter_component_.applicantsfiltercomponent.html
@@ -348,7 +348,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants-filter/applicants-filter.component.ts:110</li>
+									<li>Defined in src/app/applicants/applicants-filter/applicants-filter.component.ts:119</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -365,13 +365,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants-filter/applicants-filter.component.ts:92</li>
+									<li>Defined in src/app/applicants/applicants-filter/applicants-filter.component.ts:98</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
 									<h5>applicant: <span class="tsd-signature-type">any</span></h5>
+									<div class="tsd-comment tsd-typography">
+									</div>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -388,13 +392,17 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants-filter/applicants-filter.component.ts:101</li>
+									<li>Defined in src/app/applicants/applicants-filter/applicants-filter.component.ts:109</li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
 									<h5>applicant: <span class="tsd-signature-type">any</span></h5>
+									<div class="tsd-comment tsd-typography">
+									</div>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -411,7 +419,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants-filter/applicants-filter.component.ts:68</li>
+									<li>Defined in src/app/applicants/applicants-filter/applicants-filter.component.ts:70</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -428,7 +436,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants-filter/applicants-filter.component.ts:78</li>
+									<li>Defined in src/app/applicants/applicants-filter/applicants-filter.component.ts:81</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -445,7 +453,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants-filter/applicants-filter.component.ts:85</li>
+									<li>Defined in src/app/applicants/applicants-filter/applicants-filter.component.ts:89</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
@@ -462,7 +470,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in src/app/applicants/applicants-filter/applicants-filter.component.ts:51</li>
+									<li>Defined in src/app/applicants/applicants-filter/applicants-filter.component.ts:52</li>
 								</ul>
 							</aside>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">void</span></h4>
