--- a/UI-Angular/JobsWeb/documentation/index.html
+++ b/UI-Angular/JobsWeb/documentation/index.html
@@ -64,7 +64,7 @@
 	<div class="row">
 		<div class="col-8 col-content">
 			<div class="tsd-panel tsd-typography">
-				<h1 id="algamoneyui">AlgamoneyUi</h1>
+				<h1 id="mycareer-web">MyCareer - Web</h1>
 				<p>This project was generated with <a href="https://github.com/angular/angular-cli">Angular CLI</a> version 1.1.2.</p>
 				<h2 id="development-server">Development server</h2>
 				<p>Run <code>ng serve</code> for a dev server. Navigate to <code>http://localhost:4200/</code>. The app will automatically reload if you change any of the source files.</p>
